# dragon-gpt-fe

./: .gitignore  README.md  US_History_Courses.csv  additional_tools.py  app.py  asset-manifest.json  dragongpt_poc.py  index.html  johnfryemail.txt  main.py  package-lock.json  package.json  poc.py  pyproject.toml  tailwind.config.js  tailwind.config.ts  tsconfig.json
.github/workflows/: azure-static-web-apps-salmon-island-01341580f.yml
backend/: Dockerfile  get_package_sizes.py  main.py  server.py
backend/data_collection/: data_manager.py
data/: grad_combined.json  undegrad_combined.json
data collection/: johnfrygoodbye.txt
data collection/grad_json-1/: aadm.json  aaml.json  acct.json  anim.json  arth.json  blaw.json  bmes.json  busn.json  catx.json  ccm.json  cftx.json  chem.json  chp.json  ci.json  cive.json  coop.json  crtv.json  cw.json  digm.json  dsre.json  ece.json  ecec.json  ecet.json  edae.json  edam.json  edgi.json  edhe.json  edsp.json  educ.json  edul.json  ehrd.json  ell.json  engr.json  envs.json  epi.json  fash.json  fdsc.json  fin.json  food.json  geo.json  (+14 more)
data collection/grad_json-2/: nhp.json  opm.json  opr.json  pa.json  pbhl.json  peng.json  phys.json  plcy.json  prmt.json  prst.json  psci.json  psy.json  pub.json  rhab.json  rsch.json  scl.json  scrp.json  syse.json  tax.json  urbs.json
data collection/undergrad_json-1/: acct.json  afas.json  anth.json  arbc.json  bet.json  blaw.json  bmes.json  cae.json  caee.json  che.json  (+45 more)
data_collection/: data_manager.py
frontend/: landing-page.html  poc.html  tailwind.config.js
src/: App.js
(+286 files in other folders)
