[tool.poetry]
name = "dragon-gpt"
version = "0.1.0"
description = ""
authors = ["Raja Giddi <97639175+RajaGiddi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.8"
langchain-community = "^0.2.7"
langchain-chroma = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
